--- a/templates/programmingtemplate.html
+++ b/templates/programmingtemplate.html
@@ -9,7 +9,7 @@
 <td class="description_cell" colspan="2"><p>{{ item[track] }}</p></td>
 </tr>
 {% for thistrack, events in data.iteritems() %}
-{% if thistrack == thistrack %}
+{% if track == thistrack %}
 {%for event in events %}
 <tr class="eventrow">
 <td class="eventname"><p><strong>{{event[0]}}</strong></p></td>
