--- a/templates/programmingtemplate.html
+++ b/templates/programmingtemplate.html
@@ -1,4 +1,4 @@
-{% for item in trackdata %}{% for track in item %}<a name="{{track}}"></a></br><table class="programming">
+{% for item in trackdata %}{% for track in item %}{% set anchortrack=track.lower().replace(" ", "")  %}<a name="{{anchortrack}}"></a></br><table class="programming">
 <tbody>
 <tr class="progtrackrow">
 <td class="progtrack" colspan="2"><h3>{{ track }}</h3></td>
