--- a/templates/programmingtemplate.html
+++ b/templates/programmingtemplate.html
@@ -10,4 +10,5 @@
 <td class="eventname"><p><strong>{{event[0]}}</strong></p></td>
 <td class="eventdesc"><p>{{event[1]}}</p></td>
 </tr>{% endfor %} {% endif %} {% endfor %}
-</table> {%endfor%} {%endfor%}
+</table>
+{%endfor%} {%endfor%}
