--- a/templates/programmingtemplate.html
+++ b/templates/programmingtemplate.html
@@ -11,6 +11,6 @@
 <td class="eventdesc"><p>{{event[1]}}</p></td>
 </tr>
 <tr>
-<td colspan="2"><p>Presenters: EVENT_PRESENTERS {{event[2]}}</p></td>
+<td class="speakerrow" colspan="2"><p>Presenters: EVENT_PRESENTERS {{event[2]}}</p></td>
 </tr>{% endfor %} {% endif %} {% endfor %}
 </table>{%endfor%} {%endfor%}
