--- a/templates/programmingtemplate.html
+++ b/templates/programmingtemplate.html
@@ -11,6 +11,6 @@
 <td class="eventdesc"><p>{{event[1]}}</p></td>
 </tr>
 <tr class="presenterrow">
-<td class="presenters" colspan="2"><p>Presenters: EVENT_PRESENTER(S): {{event[2]}}</p></td>
+<td class="presenters" colspan="2"><p>Presenter(s): {{event[2]}}</p></td>
 </tr>{% endfor %} {% endif %} {% endfor %}
 </table>{%endfor%} {%endfor%}
