--- a/templates/programbook.xml
+++ b/templates/programbook.xml
@@ -4,6 +4,6 @@
 <time>{{event['starttimeampm']}}</time>{% endif %}{% if event['allday'] != "TRUE"}{% set current_time=event['starttimeampm'] %}{% endif %}
 <event><title>{{ event['bookname'] }}</title>
 <topic>{{ event['event_type'] }}</topic>{% if venue != '' %}
-<room>{{ event['venue'] }}</room>
+<room>{{ event['booklocation'] }}</room>
 {% endif %}<blurb><participant>{{ event['speakers'] }}</participant> {{ event['bookdescrip'] }} {% if event['duration'] != "50 minutes" and event['duration'] != "00 minutes"%}<duration>{{ event['duration'] }}</duration>{% endif %}</blurb></event>{% endfor %}</events>
 
